results/SVCOMP/specgen/log-boundcheck100-2024_02_27_02_38_19.txt
public class boundcheck100 {

    //@ requires i >= 0;
    //@ ensures true;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreasing i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:10: error: Loop specifications must immediately precede a loop statement
            //@ decreasing i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= 0;
    //@ ensures true;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            //@ decreasing i;
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/boundcheck100.java:10: error: Loop specifications must immediately precede a loop statement
            //@ decreasing i;
                ^
1 error

public class boundcheck100 {

    //@ requires i >= 0;
    //@ ensures true;
    private static void recursion(int i) {
        if (i == 0) {
            return;
        }
        if (i > 0) {
            recursion(i - 1);
        }
        if (i < 0) {
            assert false;
        }
    }
}

